# openfda-python

./: CHANGELOG.md  MANIFEST.in  PRE_PUBLISH_CHECKLIST.md  PUBLISHING.md  README.md  pyproject.toml  setup.py
src/api_client/: __init__.py  openfda_client.py
src/openfda_python/: __init__.py  models.py  openfda_client.py
tests/: test_fda_api.py
